TRIMUI SMART Refined.

--- a/handheld/trimui-smart/cust_key.htm
+++ b/handheld/trimui-smart/cust_key.htm
@@ -98,7 +98,8 @@ AB膠<br>
 <img src="cust_key/18.jpg" class="maxSize"><br><br>
 
 NDS模擬器的專屬切屏開關<br>
-<img src="cust_key/19.jpg" class="maxSize"><br><br>
+<img src="cust_key/19.jpg" class="maxSize"><br>
+<img src="cust_key/20.jpg" class="maxSize"><br><br>
 
 main.c
 </p>
