LeetCode 7. Reverse Integer

--- a/program.htm
+++ b/program.htm
@@ -2547,6 +2547,10 @@ LeetCode</h3>
     6. Zigzag Conversion</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/leetcode/c_7.htm">
+    7. Reverse Integer</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/leetcode/c_9.htm">
     9. Palindrome Number</a><br>
 
