FunKey S 1. How to replace new LCD. 2. Solder UART.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4111,6 +4111,14 @@ FunKey S</h3>
 &lowast;
 <a href="handheld/funkeys/sch.htm">
 電路圖</a><br>
+
+&lowast;
+<a href="handheld/funkeys/replace_lcd.htm">
+更換LCD</a><br>
+
+&lowast;
+<a href="handheld/funkeys/uart.htm">
+焊接UART</a><br>
 <br><br><br><br>
 
 <div id="pico"></div>
