--- a/handheld/funkeys/replace_lcd.htm
+++ b/handheld/funkeys/replace_lcd.htm
@@ -45,21 +45,33 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>FunKey S</h3>
-<p><b>介紹</b></p>
+<p><b>更換LCD</b></p>
 <hr size="1">
 <p>
-簡要規格
+參考資訊：<br>
+1. <a href="https://github.com/FunKey-Project/FunKey-S-Hardware">https://github.com/FunKey-Project/FunKey-S-Hardware</a><br><br>
+
+由於司徒在拆機時，不小心把FunKey S的屏給拆壞了，因此，只好替換一個新的屏，看了一下PCB，可以很容易發現SPI腳位位於PCB上方<br>
+<img src="replace_lcd/1.jpg" class="maxSize"><br><br>
+
+ST7789 SPI屏<br>
+<img src="replace_lcd/2.jpg" class="maxSize"><br><br>
+
+背面<br>
+<img src="replace_lcd/3.jpg" class="maxSize"><br><br>
+
+腳位<br>
+<img src="replace_lcd/4.jpg" class="maxSize"><br><br>
+
+完成跳線<br>
+<img src="replace_lcd/5.jpg" class="maxSize"><br><br>
+
+由於司徒的這個ST7789 SPI屏沒有TE腳位，因此，司徒只好將它拉到隔壁的CLK腳位<br>
+<img src="replace_lcd/6.jpg" class="maxSize"><br><br>
+
+復活<br>
+<img src="replace_lcd/7.jpg" class="maxSize">
 </p>
-<table>
-  <tr><th>CPU</th><td>Allwinner V3S (Cortex-A7 1.2GHz)</td></tr>
-  <tr><th>RAM</th><td>64MB</td></tr>
-  <tr><th>Screen</th><td>1.54" 240x240 (SPI 50Hz)</td></tr>
-  <tr><th>Gamepad</th><td>DPad, 4 Buttons, Menu, Fn, Start, L1 and R2</td></tr>
-  <tr><th>Port</th><td>MicroUSB</td></tr>
-  <tr><th>Battery</th><td>3.7v 410mA</td></tr>
-  <tr><th>Dimension</th><td>42.5mm x 44.5mm x 13.8mm</td></tr>
-  <tr><th>Weight</th><td>30g</td></tr>
-</table><br>
 
 <p>
 <br><a href="../../handheld.htm">返回上一頁</a>
