FunKey S Added an example code to test screen tearing

--- a/handheld.htm
+++ b/handheld.htm
@@ -4119,6 +4119,13 @@ FunKey S</h3>
 &lowast;
 <a href="handheld/funkeys/uart.htm">
 焊接UART</a><br>
+
+&oplus;
+<b>C/C++</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/funkeys/cpp_screentear.htm">
+    Screen Tearing</a><br>
 <br><br><br><br>
 
 <div id="pico"></div>
