LeetCode 8. String to Integer (atoi)

--- a/program.htm
+++ b/program.htm
@@ -2551,6 +2551,10 @@ LeetCode</h3>
     7. Reverse Integer</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/leetcode/c_8.htm">
+    8. String to Integer (atoi)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/leetcode/c_9.htm">
     9. Palindrome Number</a><br>
 
