LeetCode 8. String to Integer (atoi)

--- a/program.htm
+++ b/program.htm
@@ -2926,6 +2926,10 @@ LeetCode</h3>
     7. Reverse Integer</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="program/leetcode/cpp_8.htm">
+    8. String to Integer (atoi)</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="program/leetcode/cpp_228.htm">
     228. Summary Ranges</a><br>
 
