LeetCode 9. Palindrome Number

--- a/program/leetcode/c_9.htm
+++ b/program/leetcode/c_9.htm
@@ -59,15 +59,13 @@
 <pre class="brush:cpp">
 bool isPalindrome(int x)
 {
-    char buf[255] = {0};
-    int n0 = 0, n1 = 0, c0 = 0;
-     
-    snprintf(buf, sizeof(buf), "%d", x);
-    n0 = strlen(buf);
-    n1 = n0 / 2;
-
-    for(c0 = 0; c0 &lt; n1; c0++){
-        if(buf[c0] != buf[n0 - c0 - 1]){
+    int c0 = 0;
+    int len = 0;
+    char buf[32] = {0};
+    
+    len = sprintf(buf, "%d", x);
+    for(c0 = 0; c0 &lt; (len &gt;&gt; 1); c0++){
+        if(buf[c0] != buf[len - c0 - 1]){
             return false;
         }
     }
