--- a/handheld/funkeys/cpp_screentear.htm
+++ b/handheld/funkeys/cpp_screentear.htm
@@ -117,6 +117,7 @@ int main(int argc, char **argv)
                 *p++= col[cc % 3];
             }
         }
+        usleep(1000000 / 60);
         cc += 1;
     }
     fb_uninit();
