FunKey-S Added an overclock example.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4124,6 +4124,10 @@ FunKey S</h3>
 <b>C/C++</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="handheld/funkeys/cpp_overclock.htm">
+    Overclock</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="handheld/funkeys/cpp_screentear.htm">
     Screen Tearing</a><br>
 <br><br><br><br>
