FunKey-S How to build FunKey-OS.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4120,6 +4120,10 @@ FunKey S</h3>
 <a href="handheld/funkeys/uart.htm">
 焊接UART</a><br>
 
+&lowast;
+<a href="handheld/funkeys/build_funkey-os.htm">
+FunKey-OS</a><br>
+
 &oplus;
 <b>C/C++</b><br>
 
