FunKey-S How to build kernel 4.14.14.

--- a/handheld.htm
+++ b/handheld.htm
@@ -4122,7 +4122,15 @@ FunKey S</h3>
 
 &lowast;
 <a href="handheld/funkeys/build_funkey-os.htm">
-FunKey-OS</a><br>
+build FunKey-OS(musl)</a><br>
+
+&lowast;
+<a href="handheld/funkeys/build_glibc.htm">
+build FunKey-OS(glibc)</a><br>
+
+&lowast;
+<a href="handheld/funkeys/build_kernel.htm">
+build kernel 4.14.14</a><br>
 
 &oplus;
 <b>C/C++</b><br>
