FunKey-S How to build FunKey-OS with glibc support.

--- a/handheld/funkeys/build_glibc.htm
+++ b/handheld/funkeys/build_glibc.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>FunKey S</h3>
-<p><b>build FunKey-OS(musl)</b></p>
+<p><b>build FunKey-OS(glibc)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -58,6 +58,63 @@ $ sudo apt install bash bc binutils build-essential bzip2 ca-certificates cpio c
 
 $ git clone https://github.com/FunKey-Project/FunKey-OS.git FunKey-OS
 $ cd FunKey-OS
+</pre><br>
+
+<p>
+diff
+</p>
+<pre>
+diff --git a/FunKey/configs/funkey_defconfig b/FunKey/configs/funkey_defconfig
+index 50c4879..9c44cb5 100644
+--- a/FunKey/configs/funkey_defconfig
++++ b/FunKey/configs/funkey_defconfig
+@@ -9,9 +9,9 @@ BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_FUNKEY_PATH)/board/funkey/patches"
+ BR2_TOOLCHAIN_EXTERNAL=y
+ BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
+ BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD=y
+-BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/FunKey-Project/FunKey-OS/releases/download/FunKey-OS-2.1.0/FunKey-sdk-2.1.0.tar.gz"
++BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/steward-fu/archives/releases/download/funkey-s/FunKey-sdk-DrUm78_glibc.tar.gz"
+ BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_14=y
+-BR2_TOOLCHAIN_EXTERNAL_CUSTOM_MUSL=y
++BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
+ BR2_TOOLCHAIN_EXTERNAL_CXX=y
+ BR2_TOOLCHAIN_EXTERNAL_GDB_SERVER_COPY=y
+ BR2_TARGET_OPTIMIZATION="-fno-PIC -march=armv7-a+neon-vfpv4 -mtune=cortex-a7 -mfpu=neon-vfpv4 -mvectorize-with-neon-quad -D__ARM_NEON__"
+diff --git a/Recovery/configs/recovery_defconfig b/Recovery/configs/recovery_defconfig
+index ef2b278..345b7f8 100644
+--- a/Recovery/configs/recovery_defconfig
++++ b/Recovery/configs/recovery_defconfig
+@@ -9,9 +9,9 @@ BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_RECOVERY_PATH)/board/funkey/patches"
+ BR2_TOOLCHAIN_EXTERNAL=y
+ BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
+ BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD=y
+-BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/FunKey-Project/FunKey-OS/releases/download/FunKey-OS-2.1.0/FunKey-sdk-2.1.0.tar.gz"
++BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/steward-fu/archives/releases/download/funkey-s/FunKey-sdk-DrUm78_glibc.tar.gz"
+ BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_14=y
+-BR2_TOOLCHAIN_EXTERNAL_CUSTOM_MUSL=y
++BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
+ BR2_TOOLCHAIN_EXTERNAL_CXX=y
+ BR2_TARGET_OPTIMIZATION="-fno-PIC -march=armv7-a+neon-vfpv4 -mtune=cortex-a7 -mfpu=neon-vfpv4"
+ BR2_TARGET_GENERIC_HOSTNAME="FunKey"
+diff --git a/SDK/configs/funkey_defconfig b/SDK/configs/funkey_defconfig
+index b02dab8..5352768 100644
+--- a/SDK/configs/funkey_defconfig
++++ b/SDK/configs/funkey_defconfig
+@@ -7,7 +7,7 @@ BR2_OPTIMIZE_FAST=y
+ BR2_SHARED_STATIC_LIBS=y
+ BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_SDK_PATH)/board/funkey/patches"
+ BR2_TOOLCHAIN_BUILDROOT_VENDOR="funkey"
+-BR2_TOOLCHAIN_BUILDROOT_MUSL=y
++BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
+ BR2_KERNEL_HEADERS_VERSION=y
+ BR2_DEFAULT_KERNEL_VERSION="4.14.14"
+ BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_14=y
+</pre><br>
+
+<p>
+編譯
+</p>
+<pre>
 $ make sdk all
 </pre><br>
 
