--- a/handheld/funkeys/build_glibc.htm
+++ b/handheld/funkeys/build_glibc.htm
@@ -56,8 +56,9 @@
 <pre>
 $ sudo apt install bash bc binutils build-essential bzip2 ca-certificates cpio cvs expect file g++ gcc git gzip liblscp-dev libncurses5-dev locales make mercurial openssh-client patch perl procps python python-dev python3 python3-dev python3-distutils python3-setuptools rsync rsync sed subversion sudo tar unzip wget which xxd
 
-$ git clone https://github.com/FunKey-Project/FunKey-OS.git FunKey-OS
+$ git clone https://github.com/DrUm78/FunKey-OS
 $ cd FunKey-OS
+$ rm -rf FunKey/package/gmu
 </pre><br>
 
 <p>
@@ -73,7 +74,7 @@ index 50c4879..9c44cb5 100644
  BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
  BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD=y
 -BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/FunKey-Project/FunKey-OS/releases/download/FunKey-OS-2.1.0/FunKey-sdk-2.1.0.tar.gz"
-+BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/steward-fu/archives/releases/download/funkey-s/FunKey-sdk-DrUm78_glibc.tar.gz"
++BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/steward-fu/archives/releases/download/funkey-s/toolchain_glibc.tar.gz"
  BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_14=y
 -BR2_TOOLCHAIN_EXTERNAL_CUSTOM_MUSL=y
 +BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
@@ -89,7 +90,7 @@ index ef2b278..345b7f8 100644
  BR2_TOOLCHAIN_EXTERNAL_CUSTOM=y
  BR2_TOOLCHAIN_EXTERNAL_DOWNLOAD=y
 -BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/FunKey-Project/FunKey-OS/releases/download/FunKey-OS-2.1.0/FunKey-sdk-2.1.0.tar.gz"
-+BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/steward-fu/archives/releases/download/funkey-s/FunKey-sdk-DrUm78_glibc.tar.gz"
++BR2_TOOLCHAIN_EXTERNAL_URL="https://github.com/steward-fu/archives/releases/download/funkey-s/toolchain_glibc.tar.gz"
  BR2_TOOLCHAIN_EXTERNAL_HEADERS_4_14=y
 -BR2_TOOLCHAIN_EXTERNAL_CUSTOM_MUSL=y
 +BR2_TOOLCHAIN_EXTERNAL_CUSTOM_GLIBC=y
