--- a/handheld/funkeys/build_funkey-os.htm
+++ b/handheld/funkeys/build_funkey-os.htm
@@ -56,7 +56,7 @@
 <pre>
 $ sudo apt install bash bc binutils build-essential bzip2 ca-certificates cpio cvs expect file g++ gcc git gzip liblscp-dev libncurses5-dev locales make mercurial openssh-client patch perl procps python python-dev python3 python3-dev python3-distutils python3-setuptools rsync rsync sed subversion sudo tar unzip wget which xxd
 
-$ git clone https://github.com/FunKey-Project/FunKey-OS.git FunKey-OS
+$ git clone https://github.com/DrUm78/FunKey-OS
 $ cd FunKey-OS
 $ make sdk all
 </pre><br>
