--- a/handheld/funkeys/build_funkey-os.htm
+++ b/handheld/funkeys/build_funkey-os.htm
@@ -49,14 +49,14 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/DrUm78/FunKey-OS">FunKey-OS</a><br><br>
+1. <a href="https://github.com/FunKey-Project/FunKey-OS">FunKey-OS</a><br><br>
 
 步驟如下：
 </p>
 <pre>
 $ sudo apt install bash bc binutils build-essential bzip2 ca-certificates cpio cvs expect file g++ gcc git gzip liblscp-dev libncurses5-dev locales make mercurial openssh-client patch perl procps python python-dev python3 python3-dev python3-distutils python3-setuptools rsync rsync sed subversion sudo tar unzip wget which xxd
 
-$ git clone https://github.com/DrUm78/FunKey-OS
+$ git clone https://github.com/FunKey-Project/FunKey-OS
 $ cd FunKey-OS
 $ make sdk all
 </pre><br>
