--- a/handheld/funkeys/build_glibc.htm
+++ b/handheld/funkeys/build_glibc.htm
@@ -49,16 +49,15 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/DrUm78/FunKey-OS">FunKey-OS</a><br><br>
+1. <a href="https://github.com/FunKey-Project/FunKey-OS">FunKey-OS</a><br><br>
 
 步驟如下：
 </p>
 <pre>
 $ sudo apt install bash bc binutils build-essential bzip2 ca-certificates cpio cvs expect file g++ gcc git gzip liblscp-dev libncurses5-dev locales make mercurial openssh-client patch perl procps python python-dev python3 python3-dev python3-distutils python3-setuptools rsync rsync sed subversion sudo tar unzip wget which xxd
 
-$ git clone https://github.com/DrUm78/FunKey-OS
+$ git clone https://github.com/FunKey-Project/FunKey-OS
 $ cd FunKey-OS
-$ rm -rf FunKey/package/gmu
 </pre><br>
 
 <p>
@@ -83,6 +82,7 @@ index 50c4879..9c44cb5 100644
  BR2_TARGET_OPTIMIZATION="-fno-PIC -march=armv7-a+neon-vfpv4 -mtune=cortex-a7 -mfpu=neon-vfpv4 -mvectorize-with-neon-quad -D__ARM_NEON__"
 diff --git a/Recovery/configs/recovery_defconfig b/Recovery/configs/recovery_defconfig
 index ef2b278..345b7f8 100644
+
 --- a/Recovery/configs/recovery_defconfig
 +++ b/Recovery/configs/recovery_defconfig
 @@ -9,9 +9,9 @@ BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_RECOVERY_PATH)/board/funkey/patches"
@@ -99,6 +99,7 @@ index ef2b278..345b7f8 100644
  BR2_TARGET_GENERIC_HOSTNAME="FunKey"
 diff --git a/SDK/configs/funkey_defconfig b/SDK/configs/funkey_defconfig
 index b02dab8..5352768 100644
+
 --- a/SDK/configs/funkey_defconfig
 +++ b/SDK/configs/funkey_defconfig
 @@ -7,7 +7,7 @@ BR2_OPTIMIZE_FAST=y
