--- a/driver/ldd/arm_asm_setup.htm
+++ b/driver/ldd/arm_asm_setup.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/pocketbeagle/releases/tag/v1.0">pocketbeagle</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/edit/ldd">ldd</a><br><br>
 
 目前市面上，有許多ARM的開發板可以選擇使用，使用者可以選擇自己喜愛的款式，當然也可以使用QEMU測試，目前司徒選定的開發板如下：<br>
 <img src="arm_asm_setup/1.jpg" class="maxSize"><br>
@@ -74,13 +74,13 @@ P.S. 因為很迷你小巧<br><br>
 Linux環境對初學者來說，比較棘手的還是系統指令的操作，這部份，使用者只能多多參考其它網站說明，司徒只會將重點放在Linux驅動程式的撰寫上，而司徒目前使用的環境是Debian x64，使用者也可以使用更友好的Ubuntu系統，環境安裝好後，接著製作MicroSD開機系統
 </p>
 <pre>
-$ cd ~/Downloads
-$ wget https://github.com/steward-fu/pocketbeagle/releases/download/v1.0/sdcard.img
-$ sudo dd if=sdcard.img of=/dev/sdx bs=1M
+$ cd
+$ wget https://github.com/steward-fu/website/releases/download/ldd/arm_sdcard.img
+$ sudo dd if=arm_sdcard.img of=/dev/sdX bs=1M
 </pre><br>
 
 <p>
-接著將此MicroSD插入PocketBeagle，連結PL2303到電腦並且開啟minicom(115200 bps)，就可以看到如下等待進入系統的畫面
+接著將此MicroSD插入PocketBeagle，連結PL2303到電腦並且開啟minicom(115200bps)，就可以看到如下等待進入系統的畫面
 </p>
 <pre>
 Welcome to PocketBeagle
@@ -92,16 +92,17 @@ P.S. 輸入root就可以進入系統<br><br>
 接著為了避免發生驅動無法掛載的問題，需要自己編譯一次Kernel
 </p>
 <pre>
-$ cd ~/Downloads
-$ wget https://github.com/steward-fu/pocketbeagle/releases/download/v1.0/gcc-4.9.tar.gz
-$ tar xvf gcc-4.9.tar.gz
+$ cd
+$ wget https://github.com/steward-fu/website/releases/download/ldd/arm_gcc-4.9.tar.gz
+$ tar xvf arm_gcc-4.9.tar.gz
 $ sudo mv gcc-4.9 /opt
+
 $ export PATH=/opt/gcc-4.9/bin:$PATH
 $ arm-linux-gnueabihf-gcc -v
   gcc version 4.9.4 (Linaro GCC 4.9-2017.01)
 
-$ wget https://github.com/steward-fu/pocketbeagle/releases/download/v1.0/kernel-4.14.108.tar.gz
-$ tar xvf kernel-4.14.108.tar.gz
+$ wget https://github.com/steward-fu/website/releases/download/ldd/arm_kernel-4.14.108.tar.gz
+$ tar xvf arm_kernel-4.14.108.tar.gz
 $ cd kernel
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make pocketbeagle_defconfig
 $ ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- make zImage dtbs -j4
