--- a/driver/ldd/arm_asm_hello.htm
+++ b/driver/ldd/arm_asm_hello.htm
@@ -56,38 +56,37 @@
 ldd.S
 </p>
 <pre class="brush:asm">
-.global init_module
-.global cleanup_module
+    .global init_module
+    .global cleanup_module
 
-.section .modinfo, "ae"
+    .section .modinfo, "ae"
 __UNIQUE_ID_0: .asciz "license=GPL"
 __UNIQUE_ID_1: .asciz "author=Steward Fu"
 __UNIQUE_ID_2: .asciz "description=Linux Driver"
 
-.section .text
+    .section .text
 msg_load:   .asciz "hello, world!\n" 
 msg_unload: .asciz "unload it\n"
 
-.align 2
-.section .text
+    .align 2
+    .section .text
 init_module:
-  push {lr}
-  ldr r0, =msg_load
-  bl printk
-  mov r0, #0
-  pop {pc}
+    push {lr}
+    ldr r0, =msg_load
+    bl printk
+    mov r0, #0
+    pop {pc}
 
 cleanup_module:
-  push {lr}
-  ldr r0, =msg_unload
-  bl printk
-  pop {pc}
-.end
+    push {lr}
+    ldr r0, =msg_unload
+    bl printk
+    pop {pc}
+    .end
 </pre>
 <p>
-<b>init_module</b>: 系統載入驅動程式時，第一時間呼叫使用<br>
-<b>cleanup_module</b>: 卸載驅動程式時，最後時間被系統呼叫使用<br>
-calling convension是r0~r3為前4個參數，剩餘的使用stack空間，傳回值則是使用r0<br><br>
+<b>init_module</b>: 系統載入驅動程式時，系統會呼叫使用<br>
+<b>cleanup_module</b>: 卸載驅動程式時，系統會呼叫使用<br><br>
 
 Makefile
 </p>
@@ -95,41 +94,42 @@ Makefile
 export ARCH=arm
 export CROSS_COMPILE=arm-linux-gnueabihf-
 export AS=${CROSS_COMPILE}as
-KERNEL=$(HOME)/Downloads/kernel
+
+KERNEL=$(HOME)/kernel
 
 obj-m += main.o
 main-objs:= ldd.o
+
 all:
 	$(AS) -o ldd.o ldd.S
 	make -C $(KERNEL) M=$(PWD) modules
 
 clean:
 	make -C $(KERNEL) M=$(PWD) clean
-</pre>
-<p>
-P.S. make指令前面是一個Tab字元，而非空白字元<br><br>
+</pre><br>
 
+<p>
 編譯
 </p>
 <pre>
 $ make
-  arm-linux-gnueabihf-as -o ldd.o ldd.S
-  make -C kernel M=hello modules
-  make[1]: Entering directory 'kernel'
-    AS [M]  hello/ldd.o
-    LD [M]  hello/main.o
-    Building modules, stage 2.
-    MODPOST 1 modules
-    CC      hello/main.mod.o
-    LD [M]  hello/main.ko
-  make[1]: Leaving directory 'kernel'
+    arm-linux-gnueabihf-as -o ldd.o ldd.S
+    make -C kernel M=hello modules
+    make[1]: Entering directory 'kernel'
+        AS [M]  hello/ldd.o
+        LD [M]  hello/main.o
+        Building modules, stage 2.
+        MODPOST 1 modules
+        CC      hello/main.mod.o
+        LD [M]  hello/main.ko
+    make[1]: Leaving directory 'kernel'
 </pre><br>
 <p>
 接著把<b>main.ko</b>放到第一分區，進入系統後，執行如下指令掛載驅動程式：
 </p>
 <pre>
 # insmod /boot/main.ko 
-  hello, world!
+    hello, world!
 </pre><br>
 
 <p>
@@ -137,7 +137,7 @@ $ make
 </p>
 <pre>
 # rmmod main
-  unload it
+    unload it
 </pre><br>
 
 <p>
