--- a/driver/ldd/arm_asm_hello.htm
+++ b/driver/ldd/arm_asm_hello.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/ldd">Source Code</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br><br>
 
 <b>hello, world!</b>是一個相當經典的入門教學範例，從這個範例的框架，使用者可以一探Linux的精簡之美，當然，它主要表達的目的，更多是對於環境的操作熟悉<br><br>
 
