--- a/driver.htm
+++ b/driver.htm
@@ -134,7 +134,7 @@ Linux Device Driver (LDD)</h3>
     kthread</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
-    chrdev<br>
+    <b>chrdev</b><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="driver/ldd/arm_asm_chrdev_mknod.htm">
