--- a/driver/ldd/arm_asm_gpio_output.htm
+++ b/driver/ldd/arm_asm_gpio_output.htm
@@ -67,7 +67,7 @@ led@5 {
 <p>
 P.S. USR3位置是GPIO1-24<br><br>
 
-Linux驅動程式可以看做是在寫韌體程式，因此，可以在驅動程式裡面直接操作GPIO暫存器，當然也可以遵循Linux規範，使用統一的GPIO操作函數，如果GPIO驅動程式沒有先移植好的話，那就只能使用GPIO暫存器操作，幸運地，在這一版PocketBeagle Kernel中，已經完成GPIO驅動程式的移植，因此，此範例將使用Linux統一的GPIO操作函數。<br><br>
+Linux驅動程式可以看做是在寫韌體程式，因此，可以在驅動程式裡面直接操作GPIO暫存器，當然也可以遵循Linux規範，使用統一的GPIO操作函數，如果GPIO驅動程式沒有先移植好的話，那就只能使用GPIO暫存器操作，幸運地，在這一版PocketBeagle Kernel中，已經完成GPIO驅動程式的移植，因此，此範例將使用Linux統一的GPIO操作函數<br><br>
 
 使用步驟如下：<br>
 1. gpio_request()<br>
