--- a/driver/ldd/arm_asm_chrdev_device.htm
+++ b/driver/ldd/arm_asm_chrdev_device.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/ldd">Source Code</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br><br>
 
 除了使用mknod工具建立Symbloic Link之外，字元驅動程式也可以自行建立這個Symbolic Link<br><br>
 
