--- a/driver/ldd/arm_asm_chrdev_mknod.htm
+++ b/driver/ldd/arm_asm_chrdev_mknod.htm
@@ -49,7 +49,7 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/ldd">Source Code</a><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br>
 2. <a href="https://linux-kernel-labs.github.io/refs/heads/master/labs/device_drivers.html">device_drivers</a><br><br>
 
 User Application可以透過檔案操作方式跟驅動程式溝通，Linux將這種檔案方式歸類成字元驅動程式(Char)和區塊驅動程式(Block)兩大類，主要區別在於傳遞方式以及速度，可以把字元驅動程式想像成每次傳輸都是以1個Byte為單位，而User Application可以透過open()、read()、write()、ioctl()、close()跟字元驅動程式溝通，那User Application怎麼知道路徑在哪呢？答案是Symbolic Link(/dev/xxx)，那Symbolic Link又如何連結到字元驅動程式呢？答案是Major、Minor號碼，Major、Minor號碼是驅動程式的索引(一個代表號碼)，字元驅動程式在被系統載入時，會註冊Major和Minor號碼，使用者可以透過mknod工具，去建立一個Symbolic Link(名稱可以由使用者隨意取)並且綁定到字元驅動程式的這個Major、Minor號碼，完成連接的溝通管道<br><br>
