--- a/driver/ldd/arm_asm_chrdev_readwrite.htm
+++ b/driver/ldd/arm_asm_chrdev_readwrite.htm
@@ -49,8 +49,8 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://www.aps-web.jp/en/ca-en/21578/#anchor2">anchor2</a><br>
-2. <a href="https://github.com/steward-fu/ldd">Source Code</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br>
+2. <a href="https://www.aps-web.jp/en/ca-en/21578/#anchor2">anchor2</a><br><br>
 
 User Application可以透過read()、write()傳遞資料給驅動程式，而需要注意的地方是，複製資料使用的方式是copy_to_user()、copy_from_user()，而不是一般的memcpy()<br><br>
 
