--- a/driver/ldd/arm_asm_hello.htm
+++ b/driver/ldd/arm_asm_hello.htm
@@ -51,7 +51,7 @@
 參考資訊：<br>
 1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br><br>
 
-<b>hello, world!</b>是一個相當經典的入門教學範例，從這個範例的框架，使用者可以一探Linux的精簡之美，當然，它主要表達的目的，更多是對於環境的操作熟悉<br><br>
+<b>hello, world!</b>是一個相當經典的入門教學範例，從這個範例的框架，使用者可以一探Linux Kernel的精簡之美，當然，它主要表達的目的，更多是對於操作環境的熟悉<br><br>
 
 ldd.S
 </p>
@@ -85,7 +85,7 @@ cleanup_module:
     .end
 </pre>
 <p>
-<b>init_module</b>: 系統載入驅動程式時，系統會呼叫使用<br>
+<b>init_module</b>: 載入驅動程式時，系統會呼叫使用<br>
 <b>cleanup_module</b>: 卸載驅動程式時，系統會呼叫使用<br><br>
 
 Makefile
@@ -125,7 +125,7 @@ $ make
     make[1]: Leaving directory 'kernel'
 </pre><br>
 <p>
-接著把<b>main.ko</b>放到第一分區，進入系統後，執行如下指令掛載驅動程式：
+接著把<b>main.ko</b>放到MicroSD第一分區，進入系統後，執行如下指令掛載驅動程式：
 </p>
 <pre>
 # insmod /boot/main.ko 
