--- a/driver/ldd/arm_asm_mod_timer.htm
+++ b/driver/ldd/arm_asm_mod_timer.htm
@@ -49,9 +49,9 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/ldd">Source Code</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br><br>
 
-Timer是一種Callback機制，提供使用者設定片段時間後觸發的方式，Timer有區分一次性或者週期性，Linux Kernel提供的mod_timer()是屬於一次性，而計算片段時間則是使用jiffies計算，jiffies是一個Global變數，該變數用來紀錄時間的中斷次數(從開機後)，可以搭配msecs_to_jiffies()計算出需要的時間間隔<br><br>
+Timer是一種Callback機制，提供使用者設定片段時間後觸發的方式，Timer有區分一次性或者週期性，Linux Kernel提供的mod_timer()是屬於一次性，而Timer時間則是使用jiffies計算，jiffies是一個Global變數，該變數用來紀錄時間的中斷次數(從開機後)，可以搭配msecs_to_jiffies()計算出需要的時間間隔<br><br>
 
 使用步驟：<br>
 1. init_timer_key()<br>
@@ -166,7 +166,7 @@ cleanup_module:
     .end
 </pre>
 <p>
-<b>init_module</b>: 設定GPIO以及Timer，msecs_to_jiffies()設定的內容，司徒直接使用常數設定<br>
+<b>init_module</b>: 設定GPIO以及Timer，msecs_to_jiffies()設定的內容，司徒直接使用PERIOD常數設定<br>
 <b>timer_handler</b>: 閃爍LED之外，由於mod_timer()是屬於一次性，因此，只要再次設定就可以變成週期性Timer<br>
 <b>cleanup_module</b>: 刪除GPIO以及Timer資源<br><br>
 
