--- a/driver/ldd/arm_asm_request_irq.htm
+++ b/driver/ldd/arm_asm_request_irq.htm
@@ -49,14 +49,15 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/ldd">Source Code</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br><br>
 
-中斷本身是一種高優先權處理的機制，一旦硬體中斷觸發後，系統會馬上跳到使用者設定的Callback副程式執行，在中斷副程式中，不應該執行太過耗時的程式，否則將拖垮系統效能，這是由於Context Switch優先級一般會比中斷來得低，在中斷副程式尚未將權限交回給系統時，系統無法做Context Switch(單核心系統)<br><br>
+中斷本身是一種高優先權處理的機制，一旦硬體中斷觸發後，系統會馬上跳到使用者設定的Callback執行，在Callback中，不應該執行太過耗時的程式，否則將拖垮系統效能，這是由於Context Switch優先級一般會比中斷來得低，在中斷副程式尚未將權限交回給系統時，系統無法做Context Switch(單核心系統來說)，也就是其它程式將無法被系統執行，Context Switch是系統交換程式執行的意思<br><br>
 
 使用步驟：<br>
 1. gpiod_to_irq()<br>
 2. request_threaded_irq()<br>
-3. free_irq()<br>
+3. free_irq()<br><br>
+
 request_irq()其實就是呼叫request_threaded_irq()，只是bottom-half傳入NULL<br><br>
 
 ldd.S
