--- a/driver/ldd/arm_asm_setup.htm
+++ b/driver/ldd/arm_asm_setup.htm
@@ -49,11 +49,10 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/website/releases/edit/ldd">ldd</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br><br>
 
 目前市面上，有許多ARM的開發板可以選擇使用，使用者可以選擇自己喜愛的款式，當然也可以使用QEMU測試，目前司徒選定的開發板如下：<br>
-<img src="arm_asm_setup/1.jpg" class="maxSize"><br>
-P.S. 因為很迷你小巧<br><br>
+<img src="arm_asm_setup/1.jpg" class="maxSize"><br><br>
 
 接著需要一條USB轉UART傳輸線，目前司徒使用PL2303傳輸線：<br>
 <img src="arm_asm_setup/2.jpg" class="maxSize"><br><br>
