--- a/driver/ldd/arm_asm_gpio_input.htm
+++ b/driver/ldd/arm_asm_gpio_input.htm
@@ -49,15 +49,15 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://github.com/steward-fu/ldd">Source Code</a><br><br>
+1. <a href="https://github.com/steward-fu/website/releases/tag/ldd">ldd</a><br><br>
 
-由於PocketBeagle板上的Power按鍵是透過PMIC連接，因此，需要連接另一個按鍵作為此篇教學使用，司徒選定27腳位，如下圖：<br>
+由於PocketBeagle板上的Power按鍵是透過PMIC連接，不適用此篇教學，因此，需要連接另一個按鍵來使用，司徒選定27腳位，如下圖：<br>
 <img src="cpp_gpio_input/2.jpg" class="maxSize"><br><br>
 
 僅需要焊接一顆按鍵即可，連接27腳位到+3.3V<br>
 <img src="cpp_gpio_input/1.jpg" class="maxSize"><br><br>
 
-使用步驟：<br>
+在此篇範例中，司徒使用Timer做按鍵檢查，當按鍵被按下時，點亮LED，反之則熄滅LED，因此，需要使用Linux Kernel的GPIO操作函數以及Timer，針對GPIO的輸入應用，步驟如下：<br>
 1. gpio_request()<br>
 2. gpiod_direction_input()<br>
 3. gpiod_get_raw_value()<br>
