--- a/driver/ldd/arm_asm_hello.htm
+++ b/driver/ldd/arm_asm_hello.htm
@@ -92,7 +92,7 @@ Makefile
 </p>
 <pre>
 export ARCH=arm
-export CROSS_COMPILE=arm-linux-gnueabihf-
+export CROSS_COMPILE=/opt/gcc-4.9/bin/arm-linux-gnueabihf-
 export AS=${CROSS_COMPILE}as
 
 KERNEL=$(HOME)/kernel
