--- a/develop.htm
+++ b/develop.htm
@@ -51,8 +51,8 @@
     <span class="big">手</span>機</a></li>
     <li><a href="system.htm">
     <span class="big">系</span>統</a></li>
-    <li><a href="network.htm" class="here">
-    <span class="big">網</span>路</a></li>
+    <li><a href="develop.htm" class="here">
+    <span class="big">二</span>次開發</a></li>
     <li><a href="emu.htm">
     <span class="big">模</span>擬器</a></li>
     <li><a href="umpc.htm">
@@ -74,33 +74,12 @@
 <div id="page">
 <br><br>
 <p>
-    <a href="#autosar"><img src="img/photos/autosar.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="AUTOSAR"/></a>
 </p>
 </div>
 
 <div id="page">
 <br><br>
 <p>
-<div id="autosar"></div>
-<h3><img src="img/photos/autosar.jpg" class="floatLeft"/>
-AUTOSAR</h3>
-<hr size="1"><br><br><br><br><br>
-
-&oplus;
-<b>SOME/IP</b><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="network/autosar/build_vsomeip-3.1.16.1.htm">
-    build vsomeip 3.1.16.1</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="network/autosar/scapy_tcp.htm">
-    如何使用SCAPY產生TCP PCAP</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="network/autosar/scapy_udp.htm">
-    如何使用SCAPY產生UDP PCAP</a><br>
-<br><br><br><br>
 
 </p>
 </div>
