--- a/picture.htm
+++ b/picture.htm
@@ -51,8 +51,8 @@
     <span class="big">手</span>機</a></li>
     <li><a href="system.htm">
     <span class="big">系</span>統</a></li>
-    <li><a href="network.htm">
-    <span class="big">網</span>路</a></li>
+    <li><a href="develop.htm">
+    <span class="big">二</span>次開發</a></li>
     <li><a href="emu.htm">
     <span class="big">模</span>擬器</a></li>
     <li><a href="umpc.htm">
