--- a/system.htm
+++ b/system.htm
@@ -51,8 +51,8 @@
     <span class="big">手</span>機</a></li>
     <li><a href="system.htm" class="here">
     <span class="big">系</span>統</a></li>
-    <li><a href="network.htm">
-    <span class="big">網</span>路</a></li>
+    <li><a href="develop.htm">
+    <span class="big">二</span>次開發</a></li>
     <li><a href="emu.htm">
     <span class="big">模</span>擬器</a></li>
     <li><a href="umpc.htm">
@@ -82,6 +82,7 @@
     <a href="#k8s"><img src="img/photos/k8s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="K8s"/></a>
     <a href="#k3s"><img src="img/photos/k3s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="K3s"/></a>
     <a href="#sailfish"><img src="img/photos/sailfish.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Sailfish OS"/></a>
+    <a href="#autosar"><img src="img/photos/autosar.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="AUTOSAR"/></a>
 </p>
 </div>
 
@@ -601,6 +602,27 @@ Sailfish OS</h3>
 &lowast;
 <a href="system/sailfish/setup.htm">
 安裝環境</a><br>
+<br><br><br><br>
+
+<div id="autosar"></div>
+<h3><img src="img/photos/autosar.jpg" class="floatLeft"/>
+AUTOSAR</h3>
+<hr size="1"><br><br><br><br><br>
+
+&oplus;
+<b>SOME/IP</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="system/autosar/build_vsomeip-3.1.16.1.htm">
+    build vsomeip 3.1.16.1</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="system/autosar/scapy_tcp.htm">
+    如何使用SCAPY產生TCP PCAP</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="system/autosar/scapy_udp.htm">
+    如何使用SCAPY產生UDP PCAP</a><br>
 <br><br><br><br>
 
 </p>
